<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    android:orientation="vertical">
    <include layout="@layout/widget_toolbar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25px"
            android:textSize="16px"
            android:text="@string/origin_password"/>

        <EditText
            android:id="@+id/mOldPasswordEt"
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:enabled="true"
            android:layout_marginLeft="125px"
            android:background="@null"
            android:textSize="16px"
            android:layout_centerVertical="true"
            android:inputType="textPassword"/>
    </RelativeLayout>
    <include layout="@layout/view_line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25px"
            android:textSize="16px"
            android:text="@string/new_password"/>

        <EditText
            android:id="@+id/mNewPasswordEt"
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125px"
            android:background="@null"
            android:textSize="16px"
            android:layout_centerVertical="true"
            android:inputType="textPassword"/>
    </RelativeLayout>
    <include layout="@layout/view_line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25px"
            android:textSize="16px"
            android:text="@string/try_again"/>

        <EditText
            android:id="@+id/mConfirmPasswordEt"
            android:layout_width="200px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125px"
            android:background="@null"
            android:textSize="16px"
            android:layout_centerVertical="true"
            android:inputType="textPassword"/>
    </RelativeLayout>
</LinearLayout>